Added nav to pages

--- a/quizmanager/Quiz/templates/Quiz/add_quiz.html
+++ b/quizmanager/Quiz/templates/Quiz/add_quiz.html
@@ -1,3 +1,4 @@
+{% include "Quiz/nav.html" %}
 <form method="post"> {% csrf_token %}
 <h2>Add a New Quiz</h2>
 <input type='hidden' name='action' value='add_quiz'> 
