Allow editing of questions

--- a/quizmanager/Quiz/templates/Quiz/nav.html
+++ b/quizmanager/Quiz/templates/Quiz/nav.html
@@ -1,4 +1,11 @@
+<script>
+function goBack() {
+  window.history.back();
+}
+</script>
 <div class="topnav">
   <a class="active" href="/">Home</a>
+  <a class="active" href="/add-quiz/">Add Quiz</a>
   <a href="logout/">Logout</a>
+  <button onclick="goBack()">Back</button>
 </div>
