--- a/quizmanager/Quiz/templates/Quiz/questions.html
+++ b/quizmanager/Quiz/templates/Quiz/questions.html
@@ -1,22 +1,22 @@
 {% include "Quiz/nav.html" %}
 
 <h1>{{quizzes}}</h1>
-<a href="edit-quiz/">Edit Quiz</a>
+<a href="edit-quiz/">Edit Quiz Name</a>
 <ol>
 {% for question in questions %}
 <br>
-    <li>{{question}}<br></li>
+    <li>{{question}}  <br></li>
     A) {{question.answer_1}}<br>
     B) {{question.answer_2}}<br>
     {% if question.answer_3 is not None %}
         C) {{question.answer_3}}<br>
     {% endif %}
-    {% if question.answer_ is not None %}
+    {% if question.answer_4 is not None %}
         D) {{question.answer_4}}<br>
         {% endif %}
     {% if question.answer_5 is not None %}
         E) {{question.answer_5}}<br>
     {% endif %}
-    
+    <a href="edit-question/{{question.id}}/">Edit Question</a>
 {% endfor %}
 </ol>
