--- a/quizmanager/Quiz/templates/Quiz/nav.html
+++ b/quizmanager/Quiz/templates/Quiz/nav.html
@@ -6,6 +6,6 @@ function goBack() {
 <div class="topnav">
   <a class="active" href="/">Home</a>
   <a class="active" href="/add-quiz/">Add Quiz</a>
-  <a href="logout/">Logout</a>
+  <a href="/logout/">Logout</a>
   <button onclick="goBack()">Back</button>
 </div>
