--- a/quizmanager/Quiz/templates/Quiz/questions.html
+++ b/quizmanager/Quiz/templates/Quiz/questions.html
@@ -1,22 +1,32 @@
 {% include "Quiz/nav.html" %}
 
 <h1>{{quizzes}}</h1>
-<a href="edit-quiz/">Edit Quiz Name</a>
+{% if 'can_edit_quiz' in permissions.name or request.user.is_superuser %}
+    <a href="edit-quiz/">Edit Quiz Name</a>
+{%endif%}
 <ol>
 {% for question in questions %}
 <br>
     <li>{{question}}  <br></li>
-    A) {{question.answer_1}}<br>
-    B) {{question.answer_2}}<br>
-    {% if question.answer_3 is not None %}
-        C) {{question.answer_3}}<br>
-    {% endif %}
-    {% if question.answer_4 is not None %}
-        D) {{question.answer_4}}<br>
+    {% if 'can_view_answers' in permissions.name or request.user.is_superuser %}
+        A) {{question.answer_1}}<br>
+        B) {{question.answer_2}}<br>
+        {% if question.answer_3 is not None %}
+            C) {{question.answer_3}}<br>
         {% endif %}
-    {% if question.answer_5 is not None %}
-        E) {{question.answer_5}}<br>
-    {% endif %}
-    <a href="edit-question/{{question.id}}/">Edit Question</a>
+        {% if question.answer_4 is not None %}
+            D) {{question.answer_4}}<br>
+            {% endif %}
+        {% if question.answer_5 is not None %}
+            E) {{question.answer_5}}<br>
+        {% endif %}
+            {% if 'can_edit_questions' in permissions.name or request.user.is_superuser %}
+                <a href="edit-question/{{question.id}}/">Edit Question</a>
+            {%endif%}
+        {%endif%}
 {% endfor %}
+<br>
+{% if 'can_edit_quiz' in permissions.name or request.user.is_superuser %}
+    <a href="/add-question/{{quizzes.id}}">Add Question</a>
+{%endif%}
 </ol>
