--- a/quizmanager/Quiz/templates/Quiz/nav.html
+++ b/quizmanager/Quiz/templates/Quiz/nav.html
@@ -1,11 +1,38 @@
+{% load static %}
+<link rel="stylesheet"  href="{%  static  'css/style.css'  %}">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <script>
 function goBack() {
   window.history.back();
 }
 </script>
-<div class="topnav">
-  <a class="active" href="/">Home</a>
-  <a class="active" href="/add-quiz/">Add Quiz</a>
+{% comment %} <div class="topnav">
+  <a class="active" href="/">Quizzes</a>
+  {% if 'can_edit_questions' in permissions.name or request.user.is_superuser %}
+    <a class="active" href="/add-quiz/">Add Quiz</a>
+  {%endif%}
   <a href="/logout/">Logout</a>
   <button onclick="goBack()">Back</button>
-</div>
+</div> {% endcomment %}
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="">Quiz Manager</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+      </li>
+      {% if 'can_edit_questions' in permissions.name or request.user.is_superuser %}
+        <li class="nav-item">
+          <a class="nav-link" href="/add-quiz/">Add Quiz</a>
+        </li>
+      {%endif%}
+      <li class="nav-item">
+        <a class="nav-link" href="/logout/">Log Out</a>
+      </li>
+    </ul>
+  </div>
+</nav>
