--- a/quizmanager/Quiz/templates/Quiz/add_quiz.html
+++ b/quizmanager/Quiz/templates/Quiz/add_quiz.html
@@ -16,4 +16,5 @@
 {{question_form.as_p}}
 <input type="submit" value="Save">
 </form>
+<button class="back-button" onclick="location.href='/';">Back</button>
 </section>
