--- a/quizmanager/Quiz/templates/Quiz/edit_question.html
+++ b/quizmanager/Quiz/templates/Quiz/edit_question.html
@@ -10,5 +10,6 @@
 <input type="checkbox" name="delete-question">
 <label for="checkbox">Delete Question</label>
 <input type="submit" value="Save">
+<button class="back-button" onclick="location.href='/quiz/{{quizes.id}}';">Back</button>
 </form>
 </section>
