--- a/quizmanager/Quiz/templates/Quiz/edit_quiz.html
+++ b/quizmanager/Quiz/templates/Quiz/edit_quiz.html
@@ -11,5 +11,6 @@
 <input type="checkbox" name="delete-quiz">
 <label for="checkbox">Delete Question</label>
 <input type="submit" value="Save">
+<button class="back-button" onclick="location.href='/quiz/{{edit_quiz_form.instance.id}}';">Back</button>
 </form>
 </section>
