--- a/quizmanager/Quiz/static/css/style.css
+++ b/quizmanager/Quiz/static/css/style.css
@@ -1,5 +1,6 @@
 h1, h2, h3, label, li, ol, ul {
     color:#383b47;
+    font-family:Arial, Helvetica, sans-serif;
 }
 a { 
     text-decoration: none; 
@@ -10,6 +11,24 @@ input[type=submit]{
     border-radius:  5px;
     width: 100px;
 }
+.back-button {
+    border-radius: 5px;
+    background-color: lightgray;
+}
+.list-container{
+    display: flex;
+    flex-direction: column;
+}
+.list-container ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 300px;
+    height: 600px;
+  }
 .login-container{
     display: flex;
     justify-content: center;
@@ -17,7 +36,7 @@ input[type=submit]{
     align-items: center;
     flex-direction: column;
     position: relative;
-    top: 40%;
+    top: 20%;
 }
 .login-container input {
     border-radius: 7px;
