--- a/quizmanager/Quiz/templates/Quiz/nav.html
+++ b/quizmanager/Quiz/templates/Quiz/nav.html
@@ -6,17 +6,12 @@ function goBack() {
   window.history.back();
 }
 </script>
-{% comment %} <div class="topnav">
-  <a class="active" href="/">Quizzes</a>
-  {% if 'can_edit_questions' in permissions.name or request.user.is_superuser %}
-    <a class="active" href="/add-quiz/">Add Quiz</a>
-  {%endif%}
-  <a href="/logout/">Logout</a>
-  <button onclick="goBack()">Back</button>
-</div> {% endcomment %}
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="">Quiz Manager</a>
+  <a class="navbar-brand" href="/">Quiz Manager</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -36,3 +31,4 @@ function goBack() {
     </ul>
   </div>
 </nav>
+
