--- a/quizmanager/Quiz/templates/Quiz/questions.html
+++ b/quizmanager/Quiz/templates/Quiz/questions.html
@@ -16,13 +16,13 @@
     <div class="answers-container">
         A) {{question.answer_1}}<br>
         B) {{question.answer_2}}<br>
-        {% if question.answer_3 is not None %}
+        {% if question.answer_3 is not None and question.answer_3 != ""  %}
             C) {{question.answer_3}}<br>
         {% endif %}
-        {% if question.answer_4 is not None %}
+        {% if question.answer_4 is not None and question.answer_4 != "" %}
             D) {{question.answer_4}}<br>
         {% endif %}
-        {% if question.answer_5 is not None %}
+        {% if question.answer_5 is not None and question.answer_5 != "" %}
             E) {{question.answer_5}}<br>
         {% endif %}
     </div>
