Updated login design

--- a/quizmanager/Quiz/templates/Registration/login.html
+++ b/quizmanager/Quiz/templates/Registration/login.html
@@ -42,5 +42,5 @@
   </form>
 
   {# Assumes you setup the password_reset view in your URLconf #}
-  <p><a href="{% url 'password_reset' %}">Lost password?</a></p>
+  {% comment %} <p><a href="{% url 'password_reset' %}">Reset password</a></p> {% endcomment %}
   </section>
