--- a/quizmanager/Quiz/static/css/style.css
+++ b/quizmanager/Quiz/static/css/style.css
@@ -40,16 +40,17 @@ input[type=submit]{
 }
 .login-container input {
     border-radius: 7px;
-    width: 350px;
+    width: 300px;
 }
 .login-container #login {
     border-radius: 7px;
-    width: auto;
+    width: 80px;
 }
 .quiz-list { 
     display: flex;
     justify-content: center;
     text-align: center;
+    margin-top: 20px;
 }
 
 .questions-container{
@@ -58,6 +59,7 @@ input[type=submit]{
     text-align: center;
     align-items: center;
     flex-direction: column;
+    margin-top: 20px;
     
 }
 .questions-container ol {
@@ -76,4 +78,5 @@ input[type=submit]{
     text-align: center;
     align-items: center;
     flex-direction: column;
+    margin-top: 20px;
 }
